# Pebble

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/models/: activity.dart  device.dart  file_item.dart  shared_folder.dart
lib/providers/: shared_folder_provider.dart
lib/screens/: activity_screen.dart  devices_screen.dart  home_screen.dart
lib/theme/: app_colors.dart  app_theme.dart
lib/views/: activity_view.dart  device_connect_view.dart  files_view.dart  home_view.dart  shared_folders_view.dart
lib/widgets/: bottom_nav.dart  device_card.dart  file_upload_zone.dart  header.dart  quick_stats.dart  recent_files.dart  transfer_progress.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  TEST_GUIDE.md
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: certificate.rs  db.rs  discovery.rs  integrity.rs  mod.rs  simple.rs  transfer.rs  watcher.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle
rust_builder/ios/: native.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: native.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
