[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "native"

[[bin]]
name = "test_discovery"
path = "src/bin/test_discovery.rs"

[[bin]]
name = "test_transfer"
path = "src/bin/test_transfer.rs"

[dependencies]
flutter_rust_bridge = "=2.11.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
anyhow = "1.0"
walkdir = "2.5"
notify = "6.1"
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
local-ip-address = "0.6"
socket2 = "0.5"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2.0"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
futures = "0.3"
tempfile = "3.24.0"

[dev-dependencies]
rand = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
